--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "author": "",
   "type": "module",
-  "module": "ESM",
-  "license": "ISC",
+  "module": "ESNext",
+  "license": "ESNext",
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@types/uuid": "^10.0.0",
     "concurrently": "^9.0.1",
     "eslint": "^9.12.0",
     "eslint-webpack-plugin": "^4.2.0",
