--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
