--- a/websockets-ui-main/package.json
+++ b/websockets-ui-main/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "start": "tsc ./index.ts",
+        "start": "tsx --watch ./index.ts",
         "start:dev": "nodemon ./index.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -14,9 +14,11 @@
     "license": "ISC",
     "devDependencies": {
         "@types/node": "^22.7.9",
+        "@types/ws": "^8.5.12",
         "nodemon": "^2.0.16",
         "ts-node": "^10.9.2",
         "tslib": "^2.8.0",
+        "tsx": "^4.19.1",
         "typescript": "^5.6.3"
     },
     "dependencies": {
